[tool.poetry]
name = "discord_tokenbag"
version = "0.1.0"
description = ""
authors = ["chazzam <6433463+chazzam@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
tokenbag = {path = "../tokenbag"}
py-cord = "^2.5.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
